Bug 286566 - crash on code visualization
Summary: crash on code visualization
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.5
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-14 08:53 UTC by dmartinezc
Modified: 2015-12-16 18:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.17.1 (KDE Applications 15.08.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dmartinezc 2011-11-14 08:53:08 UTC
Application: umbrello (2.6.5)
KDE Platform Version: 4.6.5 (4.6.5)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-12-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:

i wass viewing the code and pressed de hide/show buttons when the software crashed

-- Backtrace:
Application: Umbrello UML Modeller (umbrello), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f1dc71fb780 (LWP 5595))]

Thread 3 (Thread 0x7f1dba565700 (LWP 5596)):
#0  0x00007f1dbae7557d in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#1  0x00007f1dbf6f20a2 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f1dbf6f2f9d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f1dbf6f39f2 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f1dbaec4c44 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#5  0x00007f1dbf71a3e4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f1dc2d07d8c in start_thread (arg=0x7f1dba565700) at pthread_create.c:304
#7  0x00007f1dc300504d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#8  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f1db2b28700 (LWP 5598)):
#0  __pthread_mutex_unlock_usercnt (mutex=0x2bc96c8) at pthread_mutex_unlock.c:37
#1  __pthread_mutex_unlock (mutex=0x2bc96c8) at pthread_mutex_unlock.c:290
#2  0x00007f1dbf6f16a3 in g_main_context_acquire () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f1dbf6f2f21 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f1dbf6f3639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f1dc40b8446 in QEventDispatcherGlib::processEvents (this=0x2bc4400, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00007f1dc408c882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007f1dc408cabc in QEventLoop::exec (this=0x7f1db2b27dd0, flags=...) at kernel/qeventloop.cpp:201
#8  0x00007f1dc3fa3924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#9  0x00007f1dc406ec2f in QInotifyFileSystemWatcherEngine::run (this=0x2bb5670) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007f1dc3fa6175 in QThreadPrivate::start (arg=0x2bb5670) at thread/qthread_unix.cpp:320
#11 0x00007f1dc2d07d8c in start_thread (arg=0x7f1db2b28700) at pthread_create.c:304
#12 0x00007f1dc300504d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f1dc71fb780 (LWP 5595)):
[KCrash Handler]
#6  QList (this=0x2da7280, tBlock=0x2bf98c0, selected=false) at /usr/include/qt4/QtCore/qlist.h:118
#7  CodeEditor::changeTextBlockHighlighting (this=0x2da7280, tBlock=0x2bf98c0, selected=false) at ../../../umbrello/umbrello/dialogs/codeeditor.cpp:1111
#8  0x00000000004610ad in CodeEditor::changeHighlighting (this=0x2da7280, signal=<value optimized out>) at ../../../umbrello/umbrello/dialogs/codeeditor.cpp:1149
#9  0x00000000004650a3 in CodeEditor::qt_metacall (this=0x2da7280, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffd7cf5b00) at ./codeeditor.moc:99
#10 0x00007f1dc40a25f8 in QMetaObject::activate (sender=0x29a2570, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffd7cf5b00) at kernel/qobject.cpp:3287
#11 0x00007f1dc4bf44ce in QCheckBox::stateChanged (this=<value optimized out>, _t1=2) at .moc/release-shared/moc_qcheckbox.cpp:115
#12 0x00007f1dc493e46a in QAbstractButtonPrivate::click (this=0x29d2d00) at widgets/qabstractbutton.cpp:528
#13 0x00007f1dc493e71c in QAbstractButton::mouseReleaseEvent (this=0x29a2570, e=0x7fffd7cf6410) at widgets/qabstractbutton.cpp:1121
#14 0x00007f1dc45cccc8 in QWidget::event (this=0x29a2570, event=0x7fffd7cf6410) at kernel/qwidget.cpp:8259
#15 0x00007f1dc457b9f4 in QApplicationPrivate::notify_helper (this=0x25e3960, receiver=0x29a2570, e=0x7fffd7cf6410) at kernel/qapplication.cpp:4462
#16 0x00007f1dc4580dc3 in QApplication::notify (this=<value optimized out>, receiver=0x29a2570, e=0x7fffd7cf6410) at kernel/qapplication.cpp:4023
#17 0x00007f1dc59c86c6 in KApplication::notify (this=0x7fffd7cf9020, receiver=0x29a2570, event=0x7fffd7cf6410) at ../../kdeui/kernel/kapplication.cpp:311
#18 0x00007f1dc408d49c in QCoreApplication::notifyInternal (this=0x7fffd7cf9020, receiver=0x29a2570, event=0x7fffd7cf6410) at kernel/qcoreapplication.cpp:731
#19 0x00007f1dc457ca1d in sendEvent (receiver=0x29a2570, event=0x7fffd7cf6410, alienWidget=0x29a2570, nativeWidget=0x2e4c6e0, buttonDown=0x7f1dc505f218, lastMouseReceiver=..., spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#20 QApplicationPrivate::sendMouseEvent (receiver=0x29a2570, event=0x7fffd7cf6410, alienWidget=0x29a2570, nativeWidget=0x2e4c6e0, buttonDown=0x7f1dc505f218, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3122
#21 0x00007f1dc45fe190 in QETWidget::translateMouseEvent (this=0x2e4c6e0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4558
#22 0x00007f1dc45fcab7 in QApplication::x11ProcessEvent (this=0x7fffd7cf9020, event=0x7fffd7cf6d60) at kernel/qapplication_x11.cpp:3680
#23 0x00007f1dc4625842 in x11EventSourceDispatch (s=0x25e7870, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#24 0x00007f1dbf6f2bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f1dbf6f33a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f1dbf6f3639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f1dc40b83ef in QEventDispatcherGlib::processEvents (this=0x2575340, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#28 0x00007f1dc46254de in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#29 0x00007f1dc408c882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#30 0x00007f1dc408cabc in QEventLoop::exec (this=0x7fffd7cf7060, flags=...) at kernel/qeventloop.cpp:201
#31 0x00007f1dc4a3cfd6 in QDialog::exec (this=0x2e4c6e0) at dialogs/qdialog.cpp:552
#32 0x0000000000756a11 in UMLApp::viewCodeDocument (this=0x2825bc0, classifier=<value optimized out>) at ../../../umbrello/umbrello/uml.cpp:1848
#33 0x00000000006d9e2a in UMLWidget::slotMenuSelection (this=<value optimized out>, action=<value optimized out>) at ../../../umbrello/umbrello/widgets/umlwidget.cpp:350
#34 0x00000000006d899c in UMLWidget::qt_metacall (this=0x2a9d9e0, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fffd7cf7540) at ./umlwidget.moc:93
#35 0x00007f1dc40a25f8 in QMetaObject::activate (sender=0x2d3ed40, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffd7cf7540) at kernel/qobject.cpp:3287
#36 0x00007f1dc49b9772 in QMenu::triggered (this=<value optimized out>, _t1=0x2bc7880) at .moc/release-shared/moc_qmenu.cpp:164
#37 0x00007f1dc49ba6bb in QMenuPrivate::_q_actionTriggered (this=0x2aada80) at widgets/qmenu.cpp:1111
#38 0x00007f1dc49bf142 in QMenu::qt_metacall (this=0x2d3ed40, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7fffd7cf7700) at .moc/release-shared/moc_qmenu.cpp:105
#39 0x00007f1dc5a8fd20 in KMenu::qt_metacall (this=0x2d3ed40, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffd7cf7700) at ./kmenu.moc:76
#40 0x00007f1dc40a25f8 in QMetaObject::activate (sender=0x2bc7880, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fffd7cf7700) at kernel/qobject.cpp:3287
#41 0x00007f1dc4575122 in QAction::triggered (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#42 0x00007f1dc457530f in QAction::activate (this=0x2bc7880, event=<value optimized out>) at kernel/qaction.cpp:1257
#43 0x00007f1dc49b99f3 in QMenuPrivate::activateCausedStack (this=0x2aada80, causedStack=..., action=0x2bc7880, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:993
#44 0x00007f1dc49bf9aa in QMenuPrivate::activateAction (this=0x2aada80, action=0x2bc7880, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1085
#45 0x00007f1dc5a8ebfd in KMenu::mouseReleaseEvent (this=0x2d3ed40, e=<value optimized out>) at ../../kdeui/widgets/kmenu.cpp:458
#46 0x00007f1dc45cccc8 in QWidget::event (this=0x2d3ed40, event=0x7fffd7cf8330) at kernel/qwidget.cpp:8259
#47 0x00007f1dc49c0b8b in QMenu::event (this=0x2d3ed40, e=0x7fffd7cf8330) at widgets/qmenu.cpp:2415
#48 0x00007f1dc457b9f4 in QApplicationPrivate::notify_helper (this=0x25e3960, receiver=0x2d3ed40, e=0x7fffd7cf8330) at kernel/qapplication.cpp:4462
#49 0x00007f1dc4580dc3 in QApplication::notify (this=<value optimized out>, receiver=0x2d3ed40, e=0x7fffd7cf8330) at kernel/qapplication.cpp:4023
#50 0x00007f1dc59c86c6 in KApplication::notify (this=0x7fffd7cf9020, receiver=0x2d3ed40, event=0x7fffd7cf8330) at ../../kdeui/kernel/kapplication.cpp:311
#51 0x00007f1dc408d49c in QCoreApplication::notifyInternal (this=0x7fffd7cf9020, receiver=0x2d3ed40, event=0x7fffd7cf8330) at kernel/qcoreapplication.cpp:731
#52 0x00007f1dc457ca1d in sendEvent (receiver=0x2d3ed40, event=0x7fffd7cf8330, alienWidget=0x0, nativeWidget=0x2d3ed40, buttonDown=0x7f1dc505f218, lastMouseReceiver=..., spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#53 QApplicationPrivate::sendMouseEvent (receiver=0x2d3ed40, event=0x7fffd7cf8330, alienWidget=0x0, nativeWidget=0x2d3ed40, buttonDown=0x7f1dc505f218, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3122
#54 0x00007f1dc45fe3e4 in QETWidget::translateMouseEvent (this=0x2d3ed40, event=<value optimized out>) at kernel/qapplication_x11.cpp:4492
#55 0x00007f1dc45fcab7 in QApplication::x11ProcessEvent (this=0x7fffd7cf9020, event=0x7fffd7cf8c80) at kernel/qapplication_x11.cpp:3680
#56 0x00007f1dc4625842 in x11EventSourceDispatch (s=0x25e7870, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#57 0x00007f1dbf6f2bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#58 0x00007f1dbf6f33a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#59 0x00007f1dbf6f3639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#60 0x00007f1dc40b83ef in QEventDispatcherGlib::processEvents (this=0x2575340, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#61 0x00007f1dc46254de in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#62 0x00007f1dc408c882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#63 0x00007f1dc408cabc in QEventLoop::exec (this=0x7fffd7cf8f80, flags=...) at kernel/qeventloop.cpp:201
#64 0x00007f1dc4090ecb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#65 0x000000000072c594 in main (argc=1, argv=0x7fffd7cf94b8) at ../../../umbrello/umbrello/main.cpp:111

Reported using DrKonqi
Comment 1 Ralf Habacker 2015-09-05 22:29:57 UTC
Git commit 8721e5e29d6bca63cd640c9414da2e3601f363fc by Ralf Habacker.
Committed on 05/09/2015 at 22:28.
Pushed by habacker into branch 'Applications/15.08'.

Fix 'crash on code visualization'.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)

M  +4    -0    umbrello/dialogs/codeeditor.cpp

http://commits.kde.org/umbrello/8721e5e29d6bca63cd640c9414da2e3601f363fc
Comment 2 Ralf Habacker 2015-12-16 18:29:58 UTC
Git commit c6e387e10cb223d53c76fab5696983f5ea239e12 by Ralf Habacker.
Committed on 16/12/2015 at 18:15.
Pushed by habacker into branch 'frameworks'.

Fix 'crash on code visualization'.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)

M  +4    -0    umbrello/dialogs/codeeditor.cpp

http://commits.kde.org/umbrello/c6e387e10cb223d53c76fab5696983f5ea239e12