Fix 'crash on code visualization'.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)
BUG:286566